<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:src="@drawable/bluelogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/covid_19_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cases"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        card_view:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmed_cases"
                android:textColor="#000"
                android:layout_gravity="center"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tv_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1800000"
                android:textColor="@color/cases"
                android:layout_gravity="center"
                android:textSize="28sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_deaths"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="26dp"
        app:layout_constraintEnd_toEndOf="@+id/cv_cases"
        app:layout_constraintLeft_toLeftOf="@id/cv_cases"
        app:layout_constraintTop_toBottomOf="@id/cv_cases"
        card_view:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/deaths"
                android:textColor="#000"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tv_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/deaths"
                android:textSize="28sp"
                tools:text="1800000" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_recovered"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="26dp"
        app:layout_constraintRight_toRightOf="@id/cv_cases"
        app:layout_constraintStart_toStartOf="@+id/cv_deaths"
        app:layout_constraintTop_toBottomOf="@+id/cv_deaths"
        card_view:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/recovered"
                android:textColor="#000"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tv_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/recovered"
                android:textSize="28sp"
                tools:text="1800000" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/doctor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/doctor_logo" />

    <ProgressBar
        android:id="@+id/pgBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

</androidx.constraintlayout.widget.ConstraintLayout>